[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menus/LevelSelector.gd" type="Script" id=1]
[ext_resource path="res://Fonts/DotGothic16-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.176471, 0.176471, 0.294118, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.34902, 0.34902, 0.34902, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=9]
size = 138
outline_color = Color( 0.941176, 0.941176, 0.941176, 1 )
font_data = ExtResource( 2 )

[node name="LevelSelector" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Level4" type="Button" parent="Control"]
margin_left = 352.0
margin_top = 384.0
margin_right = 672.0
margin_bottom = 449.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
disabled = true
text = "Level 3"

[node name="Level3" type="Button" parent="Control"]
margin_left = 352.0
margin_top = 464.0
margin_right = 672.0
margin_bottom = 529.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
disabled = true
text = "Level 4"

[node name="Level2" type="Button" parent="Control"]
margin_left = 352.0
margin_top = 304.0
margin_right = 672.0
margin_bottom = 377.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Level 2"

[node name="Level1" type="Button" parent="Control"]
margin_left = 352.0
margin_top = 224.0
margin_right = 672.0
margin_bottom = 297.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Level 1"

[node name="Label" type="Label" parent="Control"]
margin_left = 32.0
margin_top = 32.0
margin_right = 997.0
margin_bottom = 233.0
custom_fonts/font = SubResource( 9 )
text = "Level Selector"
align = 1
valign = 1
uppercase = true

[connection signal="pressed" from="Control/Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Control/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Control/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Control/Level1" to="." method="_on_Level1_pressed"]
